--- a/pair.html
+++ b/pair.html
@@ -45,3 +45,16 @@
 </head>
 <body>
   <div class="container">
+ <h1>DILSHAN-MD BOT</h1>
+    <p>Use this code to pair with WhatsApp:</p>
+    <div id="code">Loading...</div>
+    <div class="hint">Go to WhatsApp > Linked Devices > Pair via Code</div>
+  </div>
+
+  <script>
+    // Simulate code fetch – in actual use, update this dynamically from backend
+    const pairingCode = '123-456'; // Replace with real-time code if using server
+    document.getElementById('code').textContent = pairingCode;
+  </script>
+</body>
+</html>
